@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/pj_init.c)
-AM_INIT_AUTOMAKE(proj, 4.4.4)
+AM_INIT_AUTOMAKE(proj, 4.4.5)
 AM_CONFIG_HEADER(src/proj_config.h)
 
 dnl Checks for programs.
