@@ -1,4 +1,4 @@
-/* src/proj_config.h.in.  Generated automatically from configure.in by autoheader.  */
+/* src/proj_config.h.in.  Generated automatically from configure.in by autoheader 2.13.  */
 
 /* Define if you have the ANSI C header files.  */
 #undef STDC_HEADERS
